<resources>
    <string name="app_name">Agencia Cultura y Deportes</string>
    <string name="title_active_login">Agencia Municipal Cultura y Deportes</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="email">E-mail</string>
    <string name="name">Nombres y Apellido</string>
    <string name="dni">Numero Dni</string>
    <string name="phone">Telefono</string>
    <string name="address">Direccion</string>
    <string name="check_remember">Recordarme</string>
    <string name="login">Login</string>
    <string name="repeat_password">Confirma la contraseña</string>
    <string name="signup">Sign Up</string>
    <string name="text_signup">No tienes cuenta?</string>
    <string name="link_signup">Registrate</string>
    <string name="all">TODO</string>
    <string name="user_email">userdefault@gmail.com</string>
    <string name="user_name">User Default</string>
    <string name="user_dni">Dni Default</string>
    <string name="user_phone">Telefono Default</string>
    <string name="user_address">Address Default</string>
    <string name="deporte">Deporte</string>
    <string name="centro_deportivo">Centro Deportivo</string>
    <string name="evento">Evento</string>
    <string name="update_profile">Guardar Usuario</string>
    <string name="siguiente">Admin</string>
    <string name="boton_eventos">Eventos</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="forget_password">¿olvidaste tu contraseña?</string>
    <string name="title_check_email">Verificacion de Email</string>
    <string name="subtitle_check_email">Para completar su registro. ¡Por favor! verifica su correo y después de clic en continuar.</string>
    <string name="continue_check_email">Continuar</string>
    <string name="title_account_recovery">Recuperación de la cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para que se te pueda enviar un correo con los pasos para cambiar tu contraseña.</string>
    <string name="recovery_account">Enviar</string>
    <string name="title_update_password">Cambio de contraseña</string>
    <string name="subtitle_update_password">Por motivos de seguridad para cambiar tu contraseña, primero debes ingresar tu contraseña actual.</string>
    <string name="title_delete_account">Eliminar cuenta</string>
    <string name="subtitle_delete_account">Por motivos de seguridad para eliminar tu cuenta por completo, debes de ingresar tu contraseña.</string>
    <string name="delete">Eliminar</string>
    //carga deportes
    <string name="date">2 de marzo de 2020</string>
    <string name="evento_name">Nombre Evento</string>
    <string name="title_activity_main">Actividades y Descuentos</string>
    <string name="subtitle_activity_main">2023</string>
    <string name="title_activity_add">Nuevo Evento</string>
    <string name="title_activity_edit">Datos del Evento</string>
    <string name="name_form">Nombre</string>
    <string name="date_form">Fecha</string>
    <string name="url_form">Url imagen</string>
    <string name="foto_form">Cargar Imagen</string>
    <string name="description_form">Descripción</string>
    <string name="save_foto">Subir foto</string>
    <string name="save">Guardar</string>
    <string name="description">Descripcion</string>
    <string name="title_activity_administrador">Administrador Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    //fin carga deportes
</resources>