<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dde3e7"
    tools:context=".MainActivity">

   <!-- <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="360dp"
        android:layout_height="172dp"
        app:cardCornerRadius="80dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        &lt;!&ndash;<ImageView
            android:id="@+id/bgProfileImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/all"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/profile_photo" />&ndash;&gt;

    </androidx.cardview.widget.CardView>-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/signOutImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/all"
                app:srcCompat="@drawable/ic_sign_out"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="85dp"
                android:gravity="center"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/user_email"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/dniTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="1dp"
                android:gravity="center"
                android:text="@string/user_dni"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/phoneTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="1dp"
                android:gravity="center"
                android:text="@string/user_phone"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/addressTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="1dp"
                android:gravity="center"
                android:text="@string/user_address"
                android:textSize="20sp" />

            <!--<View
                android:id="@+id/view2"
                android:layout_width="396dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_bg" />-->

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView">

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/all"
            app:srcCompat="@drawable/profile_photo" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="301dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="24dp"
                android:autofillHints="@string/name"
                android:background="@drawable/ic_field"
                android:drawableStart="@drawable/ic_user"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:maxLength="40"
                android:padding="5dp"
                android:textSize="15sp" />


            <EditText
                android:id="@+id/dniEditText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="24dp"
                android:autofillHints="@string/dni"
                android:background="@drawable/ic_field"
                android:drawableStart="@drawable/ic_user"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/dni"
                android:inputType="number"
                android:maxLength="8"
                android:padding="5dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="24dp"
                android:autofillHints="@string/phone"
                android:background="@drawable/ic_field"
                android:drawableStart="@drawable/ic_user"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="number"
                android:maxLength="10"
                android:padding="5dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="24dp"
                android:autofillHints="@string/address"
                android:background="@drawable/ic_field"
                android:drawableStart="@drawable/ic_user"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPersonName"
                android:maxLength="40"
                android:padding="5dp"
                android:textSize="15sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/updateProfileAppCompatButton"
                android:layout_width="190dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/ic_buttom"
                android:padding="0dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/update_profile"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <Button
                android:id="@+id/buttonSiguiente"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:layout_gravity="left"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_buttom"
                android:padding="0dp"
                android:text="@string/siguiente"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <Button
                android:id="@+id/buttonEventos"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:layout_gravity="right"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="-24dp"
                android:background="@drawable/ic_buttom"
                android:padding="0dp"
                android:text="@string/boton_eventos"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/updatePasswordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/change_password" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/deleteAccountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/delete_account" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="Editar Perfil"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="Perfil"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>