<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormulariosActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="360dp"
        android:layout_height="509dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="24dp"
                android:autofillHints="@string/name"
                android:background="@drawable/ic_field"
                android:drawableStart="@drawable/ic_user"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:maxLength="40"
                android:padding="5dp"
                android:textSize="15sp" />


            <EditText
                android:id="@+id/dniEditText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="24dp"
                android:autofillHints="@string/dni"
                android:background="@drawable/ic_field"
                android:drawableStart="@drawable/ic_user"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/dni"
                android:inputType="number"
                android:maxLength="8"
                android:padding="5dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="24dp"
                android:autofillHints="@string/phone"
                android:background="@drawable/ic_field"
                android:drawableStart="@drawable/ic_user"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="number"
                android:maxLength="10"
                android:padding="5dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="24dp"
                android:autofillHints="@string/address"
                android:background="@drawable/ic_field"
                android:drawableStart="@drawable/ic_user"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPersonName"
                android:maxLength="40"
                android:padding="5dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/deporteEditText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="24dp"
                android:autofillHints="@string/deporte"
                android:background="@drawable/ic_field"
                android:drawableStart="@drawable/ic_user"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/deporte"
                android:inputType="textPersonName"
                android:maxLength="40"
                android:padding="5dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/centroDeportivoEditText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="24dp"
                android:autofillHints="@string/centro_deportivo"
                android:background="@drawable/ic_field"
                android:drawableStart="@drawable/ic_user"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/centro_deportivo"
                android:inputType="textPersonName"
                android:maxLength="40"
                android:padding="5dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/eventoEditText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="24dp"
                android:autofillHints="@string/evento"
                android:background="@drawable/ic_field"
                android:drawableStart="@drawable/ic_user"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/evento"
                android:inputType="textPersonName"
                android:maxLength="40"
                android:padding="5dp"
                android:textSize="15sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/updateProfileAppCompatButton"
                android:layout_width="190dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/ic_buttom"
                android:padding="0dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/update_profile"
                android:textColor="@color/white"
                android:textSize="10sp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>